--- a/src/components/styles/Modal.scss
+++ b/src/components/styles/Modal.scss
@@ -146,7 +146,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 6;
+  z-index: 3;
 }
 
 .modalLike {
@@ -942,6 +942,7 @@
     overflow-y: scroll;
     justify-content: flex-start;
     -webkit-overflow-scrolling: touch;
+    z-index: 6;
   }
 
   .collectiblesTileModal {
